--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/ipeychev/loader",
   "devDependencies": {
+    "del": "^0.1.3",
+    "gulp": "^3.8.10",
+    "gulp-watch": "^1.1.0",
+    "run-sequence": "^1.0.1",
     "ypromise": "^0.2.3"
   }
 }
