--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/ipeychev/loader",
   "devDependencies": {
+    "combohandler": "^0.4.0",
     "del": "^0.1.3",
+    "express": "^4.10.2",
     "gulp": "^3.8.10",
     "gulp-watch": "^1.1.0",
     "run-sequence": "^1.0.1",
