--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "del": "^0.1.3",
     "express": "^4.10.2",
     "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.2",
+    "gulp-rename": "^1.2.0",
+    "gulp-template": "^1.1.1",
+    "gulp-uglify": "^1.0.1",
     "gulp-watch": "^1.1.0",
     "run-sequence": "^1.0.1",
     "ypromise": "^0.2.3"
