Implement Loader.define method
Implement AMD like require function. The user should provide callbacks
for success and failure instead to use Promises.

--- a/src/template/loader.template
+++ b/src/template/loader.template
@@ -18,6 +18,8 @@ if (typeof AUI === 'undefined') {
     }
 
     global.Loader = new built();
+    global.require = Loader.require.bind(Loader);
+    global.define = Loader.register.bind(Loader);
 }(typeof global !== 'undefined' ? global : /* istanbul ignore next */ this, function () {
 	'use strict';
 
