Add tests initial load

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ipeychev/loader",
   "devDependencies": {
+    "assert": "^1.1.2",
     "bluebird": "^2.3.11",
     "combohandler": "^0.4.0",
     "commander": "^2.5.0",
@@ -26,12 +27,18 @@
     "eswalk": "^1.0.2",
     "express": "^4.10.2",
     "gulp": "^3.8.10",
+    "gulp-beautify": "^1.1.1",
     "gulp-concat": "^2.4.2",
+    "gulp-istanbul": "^0.4.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
     "gulp-template": "^1.1.1",
     "gulp-uglify": "^1.0.1",
-    "gulp-watch": "^1.1.0",
+    "jshint-stylish": "^1.0.0",
     "jsstana": "^0.1.4",
+    "merge-stream": "^0.1.6",
+    "mocha": "^2.0.1",
     "run-sequence": "^1.0.1",
     "walk": "^2.3.4",
     "ypromise": "^0.2.3"
