--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "merge-stream": "^0.1.6",
     "mocha": "^2.0.1",
     "run-sequence": "^1.0.1",
+    "sinon": "^1.12.1",
     "walk": "^2.3.4",
     "ypromise": "^0.2.3"
   }
