--- a/src/config/config-base.json
+++ b/src/config/config-base.json
@@ -1,18 +1,5 @@
 {
     "url": "http://localhost:3000/combo",
     "basePath": "/modules",
-    "combine": true,
-    "groups": {
-        "chema": {
-            "combine": true,
-            "url": "http://localhost:3000/combo",
-            "basePath": "/modules/chema"
-        },
-
-        "ambrin": {
-            "combine": true,
-            "url": "http://localhost:3000/combo",
-            "basePath": "/modules/ambrin"
-        }
-    }
+    "combine": true
 }
