--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "^2.0.1",
     "run-sequence": "^1.0.1",
     "sinon": "^1.12.1",
+    "v8-natives": "0.0.1",
     "walk": "^2.3.4",
     "ypromise": "^0.2.3"
   }
