--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-concat": "^2.4.2",
     "gulp-es6-module-transpiler": "^0.1.3",
     "gulp-istanbul": "^0.4.0",
+    "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.9.0",
     "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
