--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -35,7 +35,8 @@
     "mocha": "*"
   },
   "peerDependencies": {
-    "yo": ">=1.0.0",
-    "gulp": ">=3.5.0"
+    "bower": ">=1.3.0",
+    "gulp": ">=3.5.0",
+    "yo": ">=1.0.0"
   }
 }
