--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "Loader",
   "version": "1.0.0",
-  "description": "YUI like Loader",
+  "description": "AMD Loader with support for combo URL and conditional loading",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -17,34 +17,28 @@
   },
   "homepage": "https://github.com/ipeychev/loader",
   "devDependencies": {
-    "assert": "^1.1.2",
-    "bluebird": "^2.3.11",
-    "combohandler": "^0.4.0",
-    "commander": "^2.5.0",
-    "del": "^0.1.3",
-    "escodegen": "^1.4.1",
-    "esprima": "^1.2.2",
-    "eswalk": "^1.0.2",
-    "express": "^4.10.2",
+    "bluebird": "^2.8.2",
+    "commander": "^2.6.0",
+    "del": "^1.1.1",
+    "escodegen": "^1.6.0",
+    "esprima-fb": "^10001.1.0-dev-harmony-fb",
     "gulp": "^3.8.10",
+    "gulp-6to5": "^2.0.2",
     "gulp-beautify": "^1.1.1",
-    "gulp-concat": "^2.4.2",
-    "gulp-es6-module-transpiler": "^0.1.3",
-    "gulp-istanbul": "^0.4.0",
+    "gulp-concat": "^2.4.3",
+    "gulp-istanbul": "^0.5.0",
     "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "^1.9.0",
     "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-template": "^1.1.1",
-    "gulp-uglify": "^1.0.1",
+    "gulp-template": "^2.0.0",
+    "gulp-uglify": "^1.1.0",
     "jshint-stylish": "^1.0.0",
     "jsstana": "^0.1.4",
-    "merge-stream": "^0.1.6",
-    "mocha": "^2.0.1",
-    "run-sequence": "^1.0.1",
-    "sinon": "^1.12.1",
+    "merge-stream": "^0.1.7",
+    "run-sequence": "^1.0.2",
+    "sinon": "^1.12.2",
     "v8-natives": "0.0.1",
-    "walk": "^2.3.4",
-    "ypromise": "^0.2.3"
+    "walk": "^2.3.9"
   }
 }
