--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-rename": "^1.2.0",
     "gulp-template": "^2.0.0",
     "gulp-uglify": "^1.1.0",
+    "jsdoc": "^3.3.0-alpha13",
     "jshint-stylish": "^1.0.0",
     "jsstana": "^0.1.4",
     "merge-stream": "^0.1.7",
