--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lfr-amd-loader",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "AMD Loader with support for combo URL and conditional loading",
   "main": "main.js",
   "scripts": {
@@ -34,7 +34,6 @@
     "gulp-rename": "^1.2.0",
     "gulp-template": "^2.0.0",
     "gulp-uglify": "^1.1.0",
-    "js-beautify": "^1.5.4",
     "jsdoc": "^3.3.0-alpha13",
     "jshint-stylish": "^1.0.0",
     "jsstana": "^0.1.4",
@@ -43,5 +42,9 @@
     "sinon": "^1.12.2",
     "v8-natives": "0.0.1",
     "walk": "^2.3.9"
+  },
+  "dependencies": {
+    "js-beautify": "^1.5.4",
+    "update-notifier": "^0.3.0"
   }
 }
