--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -3,7 +3,7 @@
   "version": "7.0.1",
   "description": "Yeoman generator for creating Liferay themes",
   "license": "MIT",
-  "main": "app/index.js",
+  "main": "generators/app/index.js",
   "repository": "natecavanaugh/generator-liferay-theme",
   "author": {
     "name": "Nate Cavanaugh",
