--- a/package.json
+++ b/package.json
@@ -17,34 +17,32 @@
   },
   "homepage": "https://github.com/ipeychev/lfr-amd-loader",
   "devDependencies": {
+    "bluebird": "^2.9.14",
     "combohandler": "^0.4.0",
+    "commander": "^2.7.1",
     "del": "^1.1.1",
-    "gulp": "^3.8.10",
-    "gulp-6to5": "^2.0.2",
-    "gulp-beautify": "^1.1.1",
-    "gulp-concat": "^2.4.3",
-    "gulp-istanbul": "^0.5.0",
+    "escodegen": "^1.6.1",
+    "esprima-fb": "^13001.1001.0-dev-harmony-fb",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
+    "gulp-beautify": "^1.1.2",
+    "gulp-concat": "^2.5.2",
+    "gulp-istanbul": "^0.6.0",
     "gulp-jsdoc": "^0.1.4",
-    "gulp-jshint": "^1.9.0",
+    "gulp-jshint": "^1.9.2",
     "gulp-mocha": "^2.0.0",
     "gulp-rename": "^1.2.0",
-    "gulp-template": "^2.0.0",
+    "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.1.0",
-    "jsdoc": "^3.3.0-alpha13",
-    "jshint-stylish": "^1.0.0",
+    "js-beautify": "^1.5.5",
+    "jsdoc": "^3.3.0-beta2",
+    "jshint-stylish": "^1.0.1",
+    "jsstana": "^0.1.5",
     "merge-stream": "^0.1.7",
     "run-sequence": "^1.0.2",
-    "sinon": "^1.12.2",
-    "v8-natives": "0.0.1"
-  },
-  "dependencies": {
-    "bluebird": "^2.8.2",
-    "commander": "^2.6.0",
-    "escodegen": "^1.6.0",
-    "esprima-fb": "^10001.1.0-dev-harmony-fb",
-    "js-beautify": "^1.5.4",
-    "jsstana": "^0.1.4",
-    "update-notifier": "^0.3.0",
+    "sinon": "^1.14.1",
+    "update-notifier": "^0.3.1",
+    "v8-natives": "0.0.1",
     "walk": "^2.3.9"
   }
 }
