--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lfr-amd-loader",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "AMD Loader with support for combo URL and conditional loading",
   "main": "main.js",
   "scripts": {
@@ -16,17 +16,6 @@
     "url": "https://github.com/ipeychev/lfr-amd-loader/issues"
   },
   "homepage": "https://github.com/ipeychev/lfr-amd-loader",
-  "dependencies": {
-    "bluebird": "^2.9.24",
-    "commander": "^2.8.0",
-    "esprima-fb": "^15001.1.0-dev-harmony-fb",
-    "js-beautify": "^1.5.5",
-    "jsstana": "^0.1.5",
-    "minimatch": "^2.0.4",
-    "recast": "^0.10.12",
-    "update-notifier": "^0.3.2",
-    "walk": "^2.3.9"
-    },
   "devDependencies": {
     "combohandler": "^0.4.0",
     "del": "^1.1.1",
@@ -44,6 +33,7 @@
     "gulp-uglify": "^1.2.0",
     "jsdoc": "^3.3.0-beta3",
     "jshint-stylish": "^1.0.1",
+    "lfr-module-config-generator": "^1.0.1",
     "merge-stream": "^0.1.7",
     "run-sequence": "^1.0.2",
     "sinon": "^1.14.1",
