--- a/package.json
+++ b/package.json
@@ -17,26 +17,26 @@
   },
   "homepage": "https://github.com/ipeychev/lfr-amd-loader",
   "devDependencies": {
+    "chai": "^3.0.0",
     "combohandler": "^0.4.0",
-    "del": "^1.1.1",
+    "del": "^1.2.0",
     "escodegen": "^1.6.1",
-    "gulp": "^3.8.11",
+    "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-beautify": "^1.1.2",
     "gulp-concat": "^2.5.2",
-    "gulp-istanbul": "^0.8.1",
+    "gulp-istanbul": "^0.10.0",
     "gulp-jsdoc": "^0.1.4",
-    "gulp-jshint": "^1.10.0",
-    "gulp-mocha": "^2.0.1",
+    "gulp-mocha": "^2.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
-    "jsdoc": "^3.3.0-beta3",
-    "jshint-stylish": "^1.0.1",
-    "lfr-module-config-generator": "^1.0.1",
+    "jsdoc": "^3.3.2",
+    "jshint-stylish": "^2.0.0",
+    "lfr-module-config-generator": "latest",
     "merge-stream": "^0.1.7",
-    "run-sequence": "^1.0.2",
-    "sinon": "^1.14.1",
+    "run-sequence": "^1.1.0",
+    "sinon": "^1.15.3",
     "v8-natives": "0.0.2"
   }
 }
