--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "escodegen": "^1.6.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
-    "gulp-beautify": "^1.1.2",
     "gulp-concat": "^2.5.2",
     "gulp-istanbul": "^0.10.0",
     "gulp-jsdoc": "^0.1.4",
     "gulp-mocha": "^2.1.1",
     "gulp-rename": "^1.2.2",
+    "gulp-strip-debug": "^1.0.2",
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
     "jsdoc": "^3.3.2",
     "jshint-stylish": "^2.0.0",
     "lfr-module-config-generator": "latest",
-    "merge-stream": "^0.1.7",
+    "merge-stream": "^0.1.8",
     "run-sequence": "^1.1.0",
     "sinon": "^1.15.3",
     "v8-natives": "0.0.2"
