--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -33,6 +33,7 @@
   ],
   "dependencies": {
     "chalk": "^0.5.0",
+    "insight": "^0.7.0",
     "lodash": "^2.4.1",
     "slug": "^0.8.0",
     "yeoman-generator": "^0.18.0",
