--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -35,6 +35,7 @@
     "chalk": "^0.5.0",
     "insight": "^0.7.0",
     "lodash": "^2.4.1",
+    "minimist": "^1.2.0",
     "slug": "^0.8.0",
     "yeoman-generator": "^0.18.0",
     "yosay": "^0.3.0"
