--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -21,7 +21,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "mocha test/*"
+    "test": "mocha test/**/*.js"
   },
   "files": [
     "generators"
