--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "lfr-amd-loader",
-  "version": "1.3.7",
+  "name": "liferay-amd-loader",
+  "version": "1.3.8",
   "description": "AMD Loader with support for combo URL and conditional loading",
   "main": "main.js",
   "scripts": {
@@ -41,7 +41,7 @@
     "gulp-uglify": "^1.2.0",
     "jsdoc": "^3.3.2",
     "jshint-stylish": "^2.0.0",
-    "lfr-module-config-generator": "latest",
+    "liferay-module-config-generator": "latest",
     "merge-stream": "^1.0.0",
     "run-sequence": "^1.1.0",
     "sinon": "^1.15.3",
