--- a/packages/generator-liferay-theme/.travis.yml
+++ b/packages/generator-liferay-theme/.travis.yml
@@ -1,6 +1,10 @@
 language: node_js
 node_js:
-  - '0.10'
-before_install:
-  - currentfolder=${PWD##*/}
-  - if [ "$currentfolder" != 'generator-liferay-theme' ]; then cd .. && eval "mv $currentfolder generator-liferay-theme" && cd generator-liferay-theme; fi
+    - "5.0"
+    - "4.2"
+    - "4.1"
+    - "4.0"
+    - "0.12"
+    - "0.11"
+    - "0.10"
+    - "node"
