--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "combohandler": "^0.4.0",
     "dateformat": "^1.0.12",
     "del": "^2.2.0",
+    "es6-promise": "^3.0.2",
     "escodegen": "^1.6.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
