Only add required-deployment-contexts for 6.2

--- a/packages/generator-liferay-theme/generators/app/templates/src/WEB-INF/liferay-plugin-package.properties
+++ b/packages/generator-liferay-theme/generators/app/templates/src/WEB-INF/liferay-plugin-package.properties
@@ -10,8 +10,10 @@ author=Liferay, Inc.
 licenses=LGPL
 liferay-versions=<%= liferayVersions %>
 
+<% if (liferayVersion == 6.2) { %>
 #required-deployment-contexts=\
 #    resources-importer-web
+<% } %>
 
 resources-importer-developer-mode-enabled=true
 
