Removing resources-importer-target-class-name and resources-importer-target-value from generated liferay-plugin-package.properties since setting those should be up to the theme developer

--- a/packages/generator-liferay-theme/generators/app/templates/src/WEB-INF/liferay-plugin-package.properties
+++ b/packages/generator-liferay-theme/generators/app/templates/src/WEB-INF/liferay-plugin-package.properties
@@ -10,14 +10,7 @@ author=Liferay, Inc.
 licenses=LGPL
 liferay-versions=<%= liferayVersions %>
 
-<% if (liferayVersion == 6.2) { %>
-#required-deployment-contexts=\
-#    resources-importer-web
-<% } %>
+<% if (liferayVersion == 6.2) { %>#required-deployment-contexts=\
+#    resources-importer-web<% } %>
 
 resources-importer-developer-mode-enabled=true
-
-<% if (liferayVersion != 6.2) { %>
-resources-importer-target-class-name=com.liferay.portal.kernel.model.Group
-resources-importer-target-value=Guest
-<% } %>
