--- a/packages/liferay-theme-deps-6.2/package.json
+++ b/packages/liferay-theme-deps-6.2/package.json
@@ -5,8 +5,12 @@
   "main": "package.json",
   "author": "Rob Frampton <rob.g.frampton@gmail.com> (https://github.com/Robert-Frampton)",
   "license": "ISC",
+  "scripts": {
+    "install": "node scripts/install.js"
+  },
   "dependencies": {
     "gulp-ruby-sass": "^2.0.6",
+    "liferay-theme-deps-normalize": "*",
     "liferay-theme-mixins": "^6.2.2",
     "liferay-theme-styled": "^6.2.2",
     "liferay-theme-unstyled": "^6.2.3"
