--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -32,7 +32,9 @@
     "theme"
   ],
   "dependencies": {
+    "async": "^1.5.2",
     "chalk": "^0.5.0",
+    "inquirer": "^0.12.0",
     "insight": "^0.7.0",
     "lodash": "^4.6.1",
     "minimist": "^1.2.0",
