--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -37,6 +37,7 @@
     "inquirer": "^0.12.0",
     "insight": "^0.7.0",
     "lodash": "^4.6.1",
+    "lodash-bindright": "^1.0.1",
     "minimist": "^1.2.0",
     "slug": "^0.8.0",
     "yeoman-generator": "^0.18.0",
