Add missing dev dependencies

--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -46,8 +46,10 @@
   "devDependencies": {
     "chai": "^1.10.0",
     "chai-fs": "^0.1.0",
+    "gulp": "^3.9.1",
     "gulp-istanbul": "^0.10.3",
-    "gulp-mocha": "^2.2.0"
+    "gulp-mocha": "^2.2.0",
+    "sinon": "^1.17.3"
   },
   "peerDependencies": {
     "gulp": ">=3.5.0",
