--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -49,7 +49,8 @@
     "gulp": "^3.9.1",
     "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.2.0",
-    "sinon": "^1.17.3"
+    "sinon": "^1.17.3",
+    "strip-ansi": "^3.0.1"
   },
   "peerDependencies": {
     "gulp": ">=3.5.0",
