--- a/packages/liferay-theme-finder/package.json
+++ b/packages/liferay-theme-finder/package.json
@@ -7,5 +7,17 @@
   "scripts": {
     "test": "mocha test"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "dependencies": {
+    "async": "^2.0.1",
+    "cross-spawn": "^4.0.0",
+    "globby": "^6.0.0",
+    "lodash": "^4.15.0",
+    "npm-keyword": "^4.2.0",
+    "package-json": "^2.4.0",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "ava": "^0.16.0"
+  }
 }
