--- a/packages/liferay-theme-finder/package.json
+++ b/packages/liferay-theme-finder/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^2.0.1",
     "cross-spawn": "^4.0.0",
+    "fs-extra": "^0.24.0",
     "globby": "^6.0.0",
     "lodash": "^4.15.0",
     "npm-keyword": "^4.2.0",
