Add repository field

--- a/packages/liferay-theme-finder/package.json
+++ b/packages/liferay-theme-finder/package.json
@@ -4,6 +4,7 @@
   "license": "ISC",
   "main": "index.js",
   "name": "liferay-theme-finder",
+  "repository": "Robert-Frampton/liferay-theme-finder",
   "scripts": {
     "coveralls": "gulp coveralls",
     "test": "nyc ava"
