--- a/packages/liferay-theme-finder/package.json
+++ b/packages/liferay-theme-finder/package.json
@@ -32,7 +32,8 @@
     "globby": "^6.0.0",
     "lodash": "^4.15.0",
     "npm-keyword": "^4.2.0",
-    "package-json": "^1.2.0"
+    "package-json": "^1.2.0",
+    "spawn-sync": "^1.0.15"
   },
   "devDependencies": {
     "ava": "^0.16.0",
