Polyfill for Promise in IE
Fixes #105

--- a/src/template/script-loader.template
+++ b/src/template/script-loader.template
@@ -1,6 +1,10 @@
 (function (global, factory) {
     'use strict';
 
+    if (typeof Promise === 'undefined' && typeof ES6Promise !== 'undefined') {
+        self.Promise = ES6Promise;
+    }
+
     var built = factory(global);
 
     /* istanbul ignore else */
