--- a/src/template/loader.template
+++ b/src/template/loader.template
@@ -1,3 +1,9 @@
 <%= vendor %>
 
 <%= source %>
+
+(function () {
+  if (typeof window.Promise === 'undefined' && typeof window.ES6Promise !== 'undefined') {
+      window.Promise = window.ES6Promise;
+  }
+}());
