--- a/src/template/loader-pure.template
+++ b/src/template/loader-pure.template
@@ -31,4 +31,6 @@
 		window.require = global.require;
 		window.define = global.define;
 	}
+
+	global.Loader.version = function() { return '<%= version %>' };
 }());
