--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "eslintconfig",
     "liferay"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/liferay/eslint-config-liferay.git"
+  },
   "author": "Liferay",
   "license": "MIT",
   "devDependencies": {
