Adds eslint-config-google as distribution dependency (#2)

--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "author": "Liferay",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^3.17.1",
-    "eslint-config-google": "^0.7.1"
+    "eslint": "^3.17.1"
   },
   "peerDependencies": {
-    "eslint": "^3.17.1",
+    "eslint": "^3.17.1"
+  },
+  "dependencies": {
     "eslint-config-google": "^0.7.1"
   }
 }
