--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "dateformat": "^1.0.12",
     "del": "^2.2.0",
     "escodegen": "^1.6.1",
-    "eslint": "^3.18.0",
-    "eslint-config-google": "^0.7.1",
+    "eslint": "^3.19.0",
+    "eslint-config-liferay": "^1.0.1",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.5.2",
+    "gulp-eslint": "^3.0.1",
     "gulp-istanbul": "^0.10.0",
     "gulp-jsdoc": "^0.1.5",
     "gulp-mocha": "^2.1.1",
