--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "AMD Loader with support for combo URL and conditional loading",
   "main": "main.js",
   "scripts": {
-    "test": "gulp test",
+    "lint": "eslint src/js/*.js",
+    "precommit": "lint-staged",
+    "prepublish": "publish-please guard",
     "publish-please": "publish-please",
-    "prepublish": "publish-please guard"
+    "test": "gulp test"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --use-tabs true --tab-width 4 --single-quote --write",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
@@ -25,9 +33,7 @@
   },
   "homepage": "https://github.com/liferay/liferay-amd-loader",
   "dependencies": {
-    "es6-promise": "^4.0.5",
-    "prettier": "^1.3.1",
-    "through2": "^2.0.3"
+    "es6-promise": "^4.0.5"
   },
   "devDependencies": {
     "babel-plugin-transform-es2015-modules-amd": "^6.3.13",
@@ -37,7 +43,7 @@
     "del": "^2.2.0",
     "escodegen": "^1.6.1",
     "eslint": "^3.19.0",
-    "eslint-config-liferay": "^1.0.1",
+    "eslint-config-liferay": "^1.0.2",
     "gulp": "^3.9.0",
     "gulp-babel": "^6.1.1",
     "gulp-concat": "^2.5.2",
@@ -49,13 +55,17 @@
     "gulp-strip-debug": "^1.0.2",
     "gulp-template": "^3.0.0",
     "gulp-uglify": "^1.2.0",
+    "husky": "^0.13.4",
     "jsdoc": "^3.4.0",
     "jshint-stylish": "^2.0.0",
     "liferay-module-config-generator": "latest",
+    "lint-staged": "^4.0.0",
     "merge-stream": "^1.0.0",
+    "prettier": "^1.4.4",
     "publish-please": "^2.1.4",
     "run-sequence": "^1.1.0",
     "sinon": "^1.15.3",
+    "through2": "^2.0.3",
     "v8-natives": "0.0.2"
   }
 }
