--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     ]
   },
   "jest": {
-    "modulePathIgnorePatterns": ["lib/.*"]
+    "modulePathIgnorePatterns": [
+      "lib/.*"
+    ]
   }
 }
