--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "lint-staged": {
     "src/js/*.js": [
-      "prettier --use-tabs true --tab-width 4 --single-quote --write",
+      "prettier --use-tabs true --tab-width 4 --trailing-comma es5 --single-quote --write",
       "git add"
     ]
   },
