Adds .eslintrc to the published files

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ESLint shareable config for the Liferay JavaScript Style",
   "main": "index.js",
   "files": [
+    ".eslintrc",
     "index.js"
   ],
   "keywords": [
