--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "files": [
     ".eslintrc",
-    "index.js"
+    "index.js",
+    "scripts"
   ],
   "keywords": [
     "code",
