--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,11 @@
 		"themeDisplay": true,
 		"tinyMCE": true
 	},
+	"plugins": [
+		"liferay-portal"
+	],
 	"rules": {
+		"arrowfunction-newline": ["error", "always"],
 		"brace-style": ["error", "stroustrup"],
 		"lines-around-comment": ["error", {
 			"afterBlockComment": false,
