--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint": ">=4.1.1"
   },
   "dependencies": {
-    "eslint-config-google": "^0.9.1"
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-liferay-portal": "0.0.0"
   },
   "scripts": {
     "postinstall": "node scripts/postinstall.js"
