--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "eslint-config-google": "^0.9.1",
-    "eslint-plugin-liferayportal": "1.0.0"
+    "eslint-plugin-liferayportal": "^1.0.0"
   },
   "scripts": {
     "postinstall": "node scripts/postinstall.js"
