Given that we are targeting ES5, we don't want to use the spread operator.
Fixes #151

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "rules": {
         "no-var": "off",
         "object-curly-spacing": "off",
+        "prefer-spread": "off",
         "quote-props": ["error", "as-needed"],
         "quotes": ["error", "single", {
             "avoidEscape": true
