--- a/packages/babel-preset-liferay-project/package.json
+++ b/packages/babel-preset-liferay-project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-liferay-project",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Babel preset for compiling standard Liferay projects.",
   "main": "lib/index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "babel-plugin-name-amd-modules": "1.4.0",
-    "babel-plugin-namespace-amd-define": "1.4.0",
+    "babel-plugin-namespace-amd-define": "^1.4.1",
     "babel-plugin-transform-es2015-modules-amd": "6.24.1"
   }
 }
