--- a/packages/babel-preset-liferay-standard/package.json
+++ b/packages/babel-preset-liferay-standard/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-liferay-standard",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Babel preset for bundling standard Liferay projects.",
   "main": "lib/index.js",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "babel-plugin-name-amd-modules": "1.4.0",
-    "babel-plugin-namespace-amd-define": "1.4.0",
+    "babel-plugin-namespace-amd-define": "^1.4.1",
     "babel-plugin-normalize-requires": "1.4.0",
     "babel-plugin-transform-node-env-inline": "0.2.0",
     "babel-plugin-wrap-modules-amd": "1.4.0"
