--- a/packages/liferay-npm-bundler-plugin-inject-angular-dependencies/package.json
+++ b/packages/liferay-npm-bundler-plugin-inject-angular-dependencies/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "liferay-npm-bundler-plugin-inject-angular-dependencies",
-  "version": "1.4.0",
-  "description": "A liferay-npm-bundler plugin to force injection of needed dependencies in Angular packages.",
-  "main": "lib/index.js",
-  "scripts": {
-    "build": "babel --source-maps -D -d lib src",
-    "prepublish": "npm run build"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1"
-  },
-  "dependencies": {
-    "liferay-npm-build-tools-common": "1.4.0",
-    "read-json-sync": "^2.0.0-0"
-  }
+	"name": "liferay-npm-bundler-plugin-inject-angular-dependencies",
+	"version": "1.4.1",
+	"description":
+		"A liferay-npm-bundler plugin to force injection of needed dependencies in Angular packages.",
+	"main": "lib/index.js",
+	"scripts": {
+		"build": "babel --source-maps -D -d lib src",
+		"prepublish": "npm run build"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-preset-es2015": "^6.24.1"
+	},
+	"dependencies": {
+		"liferay-npm-build-tools-common": "1.4.1",
+		"read-json-sync": "^2.0.0-0"
+	}
 }
