--- a/packages/liferay-npm-bundler/package.json
+++ b/packages/liferay-npm-bundler/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "liferay-npm-bundler",
-  "version": "1.4.0",
-  "description": "A CLI utility to bundle NPM dependencies of a Liferay OSGi bundle.",
-  "main": "lib/index.js",
-  "bin": {
-    "liferay-npm-bundler": "bin/liferay-npm-bundler.js"
-  },
-  "scripts": {
-    "build": "babel --source-maps -D -d lib src",
-    "prepublish": "npm run build"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1"
-  },
-  "dependencies": {
-    "babel-core": "^6.25.0",
-    "fs-extra": "^4.0.2",
-    "globby": "^6.1.0",
-    "liferay-npm-build-tools-common": "1.4.0",
-    "pretty-time": "^0.2.0",
-    "read-json-sync": "^1.1.1",
-    "resolve": "^1.3.3"
-  }
+	"name": "liferay-npm-bundler",
+	"version": "1.4.1",
+	"description":
+		"A CLI utility to bundle NPM dependencies of a Liferay OSGi bundle.",
+	"main": "lib/index.js",
+	"bin": {
+		"liferay-npm-bundler": "bin/liferay-npm-bundler.js"
+	},
+	"scripts": {
+		"build": "babel --source-maps -D -d lib src",
+		"prepublish": "npm run build"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-preset-es2015": "^6.24.1"
+	},
+	"dependencies": {
+		"babel-core": "^6.25.0",
+		"fs-extra": "^4.0.2",
+		"globby": "^6.1.0",
+		"liferay-npm-build-tools-common": "1.4.1",
+		"pretty-time": "^0.2.0",
+		"read-json-sync": "^1.1.1",
+		"resolve": "^1.3.3"
+	}
 }
