--- a/packages/babel-plugin-normalize-requires/package.json
+++ b/packages/babel-plugin-normalize-requires/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "babel-plugin-normalize-requires",
-	"version": "1.4.1",
-	"description":
-		"A Babel plugin that rewrites require() calls to normalize them (removing extensions and trailing slashes, for example).",
+	"version": "1.4.2",
+	"description": "A Babel plugin that rewrites require() calls to normalize them (removing extensions and trailing slashes, for example).",
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "babel --source-maps -D -d lib src",
