--- a/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
+++ b/packages/liferay-npm-bundler-plugin-replace-browser-modules/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "liferay-npm-bundler-plugin-replace-browser-modules",
-	"version": "1.4.1",
-	"description":
-		"A liferay-npm-bundler plugin to replace files listed under the browser/module entry of package.json files.",
+	"version": "1.4.2",
+	"description": "A liferay-npm-bundler plugin to replace files listed under the browser/module entry of package.json files.",
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "babel --source-maps -D -d lib src",
