--- a/packages/liferay-npm-bundler/package.json
+++ b/packages/liferay-npm-bundler/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "liferay-npm-bundler",
-	"version": "1.4.1",
-	"description":
-		"A CLI utility to bundle NPM dependencies of a Liferay OSGi bundle.",
+	"version": "1.4.2",
+	"description": "A CLI utility to bundle NPM dependencies of a Liferay OSGi bundle.",
 	"main": "lib/index.js",
 	"bin": {
 		"liferay-npm-bundler": "bin/liferay-npm-bundler.js"
@@ -19,7 +18,7 @@
 		"babel-core": "^6.25.0",
 		"fs-extra": "^4.0.2",
 		"globby": "^6.1.0",
-		"liferay-npm-build-tools-common": "1.4.1",
+		"liferay-npm-build-tools-common": "1.4.2",
 		"pretty-time": "^0.2.0",
 		"read-json-sync": "^1.1.1",
 		"resolve": "^1.3.3"
