--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "liferay-amd-loader",
-	"version": "3.0.0",
-	"description":
-		"AMD Loader with support for combo URL and conditional loading",
+	"version": "3.0.1",
+	"description": "AMD Loader with support for combo URL and conditional loading",
 	"scripts": {
 		"clean": "rm -rf build",
 		"build": "node bin/build-loader.js",
@@ -29,7 +28,12 @@
 	},
 	"author": "Iliyan Peychev",
 	"license": "LGPL-3.0",
-	"keywords": ["Liferay", "AMD", "ES6", "Loader"],
+	"keywords": [
+		"Liferay",
+		"AMD",
+		"ES6",
+		"Loader"
+	],
 	"bugs": {
 		"url": "https://github.com/liferay/liferay-amd-loader/issues"
 	},
