--- a/packages/babel-plugin-normalize-requires/package.json
+++ b/packages/babel-plugin-normalize-requires/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "babel-plugin-normalize-requires",
-	"version": "1.4.2",
-	"description":
-		"A Babel plugin that rewrites require() calls to normalize them (removing extensions and trailing slashes, for example).",
+	"version": "1.5.0",
+	"description": "A Babel plugin that rewrites require() calls to normalize them (removing extensions and trailing slashes, for example).",
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "babel --source-maps -D -d lib src",
@@ -13,6 +12,6 @@
 		"babel-preset-es2015": "^6.24.1"
 	},
 	"dependencies": {
-		"liferay-npm-build-tools-common": "1.4.2"
+		"liferay-npm-build-tools-common": "1.5.0"
 	}
 }
