--- a/packages/babel-plugin-wrap-modules-amd/package.json
+++ b/packages/babel-plugin-wrap-modules-amd/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "babel-plugin-wrap-modules-amd",
-	"version": "1.4.2",
-	"description":
-		"A Babel plugin to wrap package modules inside AMD define() calls.",
+	"version": "1.5.0",
+	"description": "A Babel plugin to wrap package modules inside AMD define() calls.",
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "babel --source-maps -D -d lib src",
@@ -14,7 +13,7 @@
 	},
 	"dependencies": {
 		"babel-template": "^6.25.0",
-		"liferay-npm-build-tools-common": "1.4.2",
+		"liferay-npm-build-tools-common": "1.5.0",
 		"read-json-sync": "^1.1.1"
 	}
 }
