--- a/packages/liferay-theme-tasks/package.json
+++ b/packages/liferay-theme-tasks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liferay-theme-tasks",
-  "version": "7.0.0",
+  "version": "8.0.0-alpha.1",
   "description": "A set of tasks for building and deploying Liferay Portal themes.",
   "license": "MIT",
   "main": "index.js",
@@ -86,7 +86,7 @@
     "gulp-ruby-sass": "^2.0.6",
     "gulp-sass": "^3.1.0",
     "liferay-theme-deps-6.2": "*",
-    "liferay-theme-deps-7.0": "*",
+    "liferay-theme-deps-7.0": "^8.0.0-alpha.1",
     "nyc": "^6.4.4",
     "prettier-eslint-cli": "^4.4.0",
     "sinon": "^1.17.2"
