--- a/packages/liferay-theme-deps-7.1/package.json
+++ b/packages/liferay-theme-deps-7.1/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "main": "package.json",
   "name": "liferay-theme-deps-7.1",
-  "version": "0.0.1",
+  "version": "8.0.0-alpha.1",
   "scripts": {
     "install": "node scripts/install.js"
   }
