--- a/packages/liferay-theme-deps-normalize/package.json
+++ b/packages/liferay-theme-deps-normalize/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liferay-theme-deps-normalize",
-  "version": "7.0.0",
+  "version": "8.0.0-alpha.1",
   "description": "Tool for normalizing liferay-theme-deps modules in post install scripts",
   "main": "index.js",
   "repository": "Robert-Frampton/liferay-theme-deps-normalize",
