--- a/packages/liferay-theme-finder/package.json
+++ b/packages/liferay-theme-finder/package.json
@@ -23,7 +23,7 @@
       "text"
     ]
   },
-  "version": "1.1.1",
+  "version": "8.0.0-alpha.1",
   "dependencies": {
     "async": "^2.0.1",
     "ava": "^0.15.2",
