--- a/packages/liferay-theme-deps-7.0/package.json
+++ b/packages/liferay-theme-deps-7.0/package.json
@@ -9,8 +9,9 @@
     "install": "node scripts/install.js"
   },
   "dependencies": {
-    "compass-mixins": "^0.12.7",
-    "gulp-sass": "~3.1.0",
+    "compass-mixins": "0.12.10",
+    "gulp-ruby-sass": "^2.0.6",
+    "gulp-sass": "3.2.0",
     "liferay-frontend-common-css": "~1.0.4",
     "liferay-frontend-theme-classic-web": "~2.0.0",
     "liferay-frontend-theme-styled": "~2.0.0",
