--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 before_install:
     - gem install compass
+    - npm install -g lerna@2.4.0
+
+install:
+    - npm run lerna
+    - npm install
 
 language: node_js
+
+node_js:
+  - '8'
 
 script:
     - npm run checkFormat
