--- a/packages/liferay-theme-es2015-hook/package.json
+++ b/packages/liferay-theme-es2015-hook/package.json
@@ -6,8 +6,9 @@
   "author": "Rob Frampton <rob.g.frampton@gmail.com> (https://github.com/Robert-Frampton)",
   "license": "ISC",
   "dependencies": {
+    "ansi-colors": "^1.1.0",
+    "fancy-log": "^1.3.2",
     "fs-extra": "^0.24.0",
-    "gulp-util": "^3.0.6",
     "liferay-module-config-generator": "^1.3.1",
     "metal-tools-build-amd": "^3.0.3",
     "metal-tools-soy": "^4.1.2",
