--- a/packages/liferay-theme-tasks/package.json
+++ b/packages/liferay-theme-tasks/package.json
@@ -25,7 +25,6 @@
     "gulp-replace-task": "^0.2.1",
     "gulp-sourcemaps": "1.6.0",
     "gulp-storage": "^1.0.6",
-    "gulp-util": "^3.0.6",
     "inquirer": "^0.12.0",
     "liferay-plugin-node-tasks": "^1.0.9",
     "liferay-theme-deps-7.0": "^8.0.0-alpha.4",
@@ -35,6 +34,7 @@
     "node-bourbon": "4.2.3",
     "npm-keyword": "^4.2.0",
     "package-json": "^1.2.0",
+    "plugin-error": "^1.0.1",
     "resolve": "^1.1.7",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
