Replace imports not only on project's files but also in node_modules packages.
Fixes #94

--- a/packages/liferay-npm-bundler-preset-standard/config.json
+++ b/packages/liferay-npm-bundler-preset-standard/config.json
@@ -11,6 +11,10 @@
 		".babelrc": {
 			"presets": ["liferay-standard"]
 		},
-		"post-plugins": ["namespace-packages", "inject-peer-dependencies"]
+		"post-plugins": [
+			"namespace-packages",
+			"inject-imports-dependencies",
+			"inject-peer-dependencies"
+		]
 	}
 }
