Add a new copy plugin to exclude imported packages from output.
Fixes #94

--- a/packages/liferay-npm-bundler-preset-standard/config.json
+++ b/packages/liferay-npm-bundler-preset-standard/config.json
@@ -7,6 +7,7 @@
 		"post-plugins": ["namespace-packages", "inject-imports-dependencies"]
 	},
 	"*": {
+		"copy-plugins": ["exclude-imports"],
 		"plugins": ["replace-browser-modules"],
 		".babelrc": {
 			"presets": ["liferay-standard"]
