--- a/packages/babel-plugin-name-amd-modules/package.json
+++ b/packages/babel-plugin-name-amd-modules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-name-amd-modules",
-  "version": "1.6.1",
+  "version": "2.0.0-rc.1",
   "description": "A Babel plugin to give name to AMD modules based on their path and package.",
   "main": "lib/index.js",
   "scripts": {
@@ -12,7 +12,7 @@
     "babel-preset-es2015": "^6.24.1"
   },
   "dependencies": {
-    "liferay-npm-build-tools-common": "1.6.1",
+    "liferay-npm-build-tools-common": "2.0.0-rc.1",
     "read-json-sync": "^1.1.1"
   }
 }
