--- a/packages/babel-plugin-namespace-modules/package.json
+++ b/packages/babel-plugin-namespace-modules/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "babel-plugin-namespace-modules",
-	"version": "1.6.1",
-	"description":
-		"A Babel plugin to namespace AMD module names based on root's project name.",
+	"version": "2.0.0-rc.1",
+	"description": "A Babel plugin to namespace AMD module names based on root's project name.",
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "babel --source-maps -D -d lib src",
@@ -13,7 +12,7 @@
 		"babel-preset-es2015": "^6.24.1"
 	},
 	"dependencies": {
-		"liferay-npm-build-tools-common": "1.6.1",
+		"liferay-npm-build-tools-common": "2.0.0-rc.1",
 		"read-json-sync": "^1.1.1"
 	}
 }
