--- a/packages/babel-preset-liferay-standard/package.json
+++ b/packages/babel-preset-liferay-standard/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "babel-preset-liferay-standard",
-	"version": "1.6.1",
+	"version": "2.0.0-rc.1",
 	"description": "Babel preset for bundling standard Liferay projects.",
 	"main": "lib/index.js",
 	"scripts": {
@@ -12,11 +12,11 @@
 		"babel-preset-es2015": "^6.24.1"
 	},
 	"dependencies": {
-		"babel-plugin-name-amd-modules": "1.6.1",
-		"babel-plugin-namespace-amd-define": "1.6.1",
-		"babel-plugin-namespace-modules": "1.6.1",
-		"babel-plugin-normalize-requires": "1.6.1",
+		"babel-plugin-name-amd-modules": "2.0.0-rc.1",
+		"babel-plugin-namespace-amd-define": "2.0.0-rc.1",
+		"babel-plugin-namespace-modules": "2.0.0-rc.1",
+		"babel-plugin-normalize-requires": "2.0.0-rc.1",
 		"babel-plugin-transform-node-env-inline": "0.2.0",
-		"babel-plugin-wrap-modules-amd": "1.6.1"
+		"babel-plugin-wrap-modules-amd": "2.0.0-rc.1"
 	}
 }
