--- a/packages/liferay-npm-build-tools-common/package.json
+++ b/packages/liferay-npm-build-tools-common/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "liferay-npm-build-tools-common",
-	"version": "1.6.1",
+	"version": "2.0.0-rc.1",
 	"description": "Utility library for Liferay NPM Build Tools.",
 	"scripts": {
 		"build": "babel --source-maps -D -d lib src",
