--- a/packages/liferay-npm-bundler-plugin-exclude-imports/package.json
+++ b/packages/liferay-npm-bundler-plugin-exclude-imports/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "liferay-npm-bundler-plugin-exclude-imports",
-	"version": "1.6.1",
-	"description":
-		"A liferay-npm-bundler plugin to exclude imported dependencies.",
+	"version": "2.0.0-rc.1",
+	"description": "A liferay-npm-bundler plugin to exclude imported dependencies.",
 	"main": "lib/index.js",
 	"scripts": {
 		"build": "babel --source-maps -D -d lib src",
@@ -13,6 +12,6 @@
 		"babel-preset-env": "^1.6.1"
 	},
 	"dependencies": {
-		"liferay-npm-build-tools-common": "1.6.1"
+		"liferay-npm-build-tools-common": "2.0.0-rc.1"
 	}
 }
