--- a/packages/liferay-theme-deps-7.1/package.json
+++ b/packages/liferay-theme-deps-7.1/package.json
@@ -15,6 +15,7 @@
   "main": "package.json",
   "name": "liferay-theme-deps-7.1",
   "version": "8.0.0-alpha.4",
+  "repository": "liferay/liferay-themes-sdk/packages/liferay-theme-deps-7.1",
   "scripts": {
     "install": "node scripts/install.js"
   }
