--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		]
 	},
 	"private": true,
+	"repository": "liferay/liferay-themes-sdk/packages/liferay-theme-tasks",
 	"scripts": {
 		"checkFormat": "npm run prettier -- --list-different",
 		"format": "npm run prettier -- --write",
