--- a/packages/liferay-theme-es2015-hook/package.json
+++ b/packages/liferay-theme-es2015-hook/package.json
@@ -1,5 +1,6 @@
 {
   "name": "liferay-theme-es2015-hook",
+  "repository": "liferay/liferay-themes-sdk/packages/liferay-theme-es2015-hook",
   "version": "8.0.0-alpha.4",
   "description": "A hook for liferay-theme-tasks that allows for es2015 transpilation and amd module configuration.",
   "main": "index.js",
