--- a/packages/generator-liferay-theme/package.json
+++ b/packages/generator-liferay-theme/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-liferay-theme",
-  "version": "8.0.0-alpha.6",
+  "version": "8.0.0-beta.0",
   "description": "Yeoman generator for creating Liferay themes",
   "license": "MIT",
   "main": "generators/app/index.js",
