--- a/packages/liferay-theme-deps-7.1/package.json
+++ b/packages/liferay-theme-deps-7.1/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "main": "package.json",
   "name": "liferay-theme-deps-7.1",
-  "version": "8.0.0-alpha.6",
+  "version": "8.0.0-beta.0",
   "repository": "liferay/liferay-themes-sdk/packages/liferay-theme-deps-7.1",
   "scripts": {
     "install": "node scripts/install.js"
