--- a/packages/liferay-theme-deps-normalize/package.json
+++ b/packages/liferay-theme-deps-normalize/package.json
@@ -5,5 +5,5 @@
   "main": "index.js",
   "name": "liferay-theme-deps-normalize",
   "repository": "liferay/liferay-themes-sdk/packages/liferay-theme-deps-normalize",
-  "version": "8.0.0-alpha.6"
+  "version": "8.0.0-beta.0"
 }
