--- a/packages/liferay-theme-finder/package.json
+++ b/packages/liferay-theme-finder/package.json
@@ -16,5 +16,5 @@
   "main": "index.js",
   "name": "liferay-theme-finder",
   "repository": "liferay/liferay-themes-sdk/packages/liferay-theme-finder",
-  "version": "8.0.0-alpha.6"
+  "version": "8.0.0-beta.0"
 }
