Create a helper to resolve module names into file paths
Fixes #169

--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
 	"jest": {
 		"modulePathIgnorePatterns": [
 			"lib/.*"
+		],
+		"testPathIgnorePatterns": [
+			"/node_modules/",
+			"/__fixtures__/"
 		]
 	}
 }
