--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"devDependencies": {
 		"eslint": "^4.19.0",
 		"eslint-config-liferay": "^2.0.18",
+		"jest": "^23.4.1",
 		"lerna": "^2.4.0",
 		"prettier-eslint-cli": "^4.7.1",
 		"sinon": "^4.4.6"
@@ -10,16 +11,17 @@
 	"repository": "liferay/liferay-themes-sdk/packages/liferay-theme-tasks",
 	"scripts": {
 		"ci":
-			"prettier-eslint --list-different && npm run lint && npm run test",
-		"format":
-			"prettier-eslint --write packages/*/src/*.js packages/*/src/**/*.js",
+			"prettier-eslint --list-different 'packages/**/*.js' && npm run lint && npm run test",
+		"format": "prettier-eslint --write 'packages/**/*.js'",
 		"lerna": "lerna bootstrap -- --no-optional && npm install",
-		"lint": "eslint packages/*/src/*.js packages/*/src/**/*.js",
-		"prettier":
-			"prettier-eslint 'packages/liferay-theme-tasks/lib/**/*.js' 'packages/liferay-theme-tasks/tasks/**/*.js' 'packages/liferay-theme-tasks/test/**/*.js'",
+		"lint": "eslint 'packages/**/*.js'",
 		"test": "jest"
 	},
 	"dependencies": {
 		"gulp": "^3.9.1"
+	},
+	"jest": {
+		"testPathIgnorePatterns": ["/node_modules/", "/__fixtures__/"],
+		"modulePathIgnorePatterns": ["/liferay-theme-finder/"]
 	}
 }
