--- a/packages/liferay-theme-es2015-hook/package.json
+++ b/packages/liferay-theme-es2015-hook/package.json
@@ -17,6 +17,6 @@
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "liferay-theme-tasks": "^1.3.9"
+    "liferay-theme-tasks": "8.0.0-beta.1"
   }
 }
